Align text of h1 to center. Give h1 vertical margins of 1.375em. Give p vertical padding of 1.182em. Change box-sizing of input elements to border-box. Constrain input width to 97%. Give input padding vertical 12px, and horizontal 30px. Give input margin 8px vertically and 1.5% horizontally. Give input border 1px solid. Make input border-color #c0c0c0. Make input border-radius. Give input background-color of rgb(209, 209, 209). Make label of #input-age-verification font-size 0.825em and display type: inline. Ensure input of #input-age-verification box-sizing is none. Make #input-age-verification vertical padding 1.182em. Give label display type: block. Align label text to center.

--- a/css/screen.css
+++ b/css/screen.css
@@ -198,8 +198,45 @@ html {
   text-rendering: optimizeLegibility;
 }
 
+h1 {
+  text-align: center;
+  margin: 1.375em 0;
+}
+
+p {
+  padding-bottom: 1.182em;
+  padding-top: 1.182em;
+}
+
+input {
+  box-sizing: border-box;
+  width: 97%;
+  padding: 12px 30px;
+  margin: 8px 1.5%;
+  border: 1px solid;
+  border-color: #c0c0c0;
+  border-radius: 6px;
+  background-color: rgb(209, 209, 209);
+}
+
+#input-age-verification label {
+  font-size: 0.825em;
+  display: inline;
+}
+
+#input-age-verification input {
+  box-sizing: none;
+  width: auto;
+}
+
+#input-age-verification {
+  padding-top: 1.182em;
+  padding-bottom: 1.182em;
+}
+
 label {
   display: block;
+  text-align: center;
 }
 
 /* ===== LAYOUT STYLES ====== */
